--- a/app/views/shared/_navigation.html.slim
+++ b/app/views/shared/_navigation.html.slim
@@ -1,7 +1,7 @@
-nav.navbar.navbar-toggleable-md.navbar-light.bg-faded.mb-3
+nav.navbar.navbar-toggleable.navbar-light.bg-faded.mb-3
   .container
     a.navbar-brand ProjectTitle
-    ul.navbar-nav.mr-auto
+    ul.navbar-nav
       li.nav-item
         a.nav-link Link1
       li.nav-item
